Refactor code structure for improved readability and maintainability

--- a/network_news.html
+++ b/network_news.html
@@ -1,13 +1,14 @@
 <h3 id='network-news'>📰 Network Activity (Last 24h, ≤1 hops)</h3>
 <div class='news-content'>
 <div class='news-summary'>
-<p><strong>Active nodes:</strong> 24 | 
+<p><strong>Active nodes:</strong> 22 | 
 <span style='color: #28a745;'>New: 0</span> | 
-<span style='color: #dc3545;'>Lost: 1</span> | 
+<span style='color: #dc3545;'>Lost: 2</span> | 
 <span style='color: #007bff;'>Changed: 0</span></p>
 </div>
 <h4 style='color: #dc3545; margin-top: 20px;'>📵 Lost Nodes</h4>
 <ul>
 <li><strong>!fd17c0ed</strong> (c0ed) - 95 - was 0 hops - <em>last seen: 09/13 10:22</em></li>
+<li><strong>!a299d1be</strong> (SP03) - RAK4631 - was 1 hops - <em>last seen: 09/14 16:45</em></li>
 </ul>
 </div>
