--- a/network_news.html
+++ b/network_news.html
@@ -1,15 +1,25 @@
-<h3 id='network-news'>📰 Network Activity (Last 24h, ≤1 hops)</h3>
+<h3 id='network-news'>📰 Network Activity (Last 48h, ≤2 hops)</h3>
 <div class='news-content'>
 <div class='news-summary'>
-<p><strong>Active nodes:</strong> 21 | 
+<p><strong>Active nodes:</strong> 67 | 
 <span style='color: #28a745;'>New: 0</span> | 
-<span style='color: #dc3545;'>Lost: 3</span> | 
-<span style='color: #007bff;'>Changed: 0</span></p>
+<span style='color: #dc3545;'>Lost: 0</span> | 
+<span style='color: #007bff;'>Changed: 1</span></p>
 </div>
-<h4 style='color: #dc3545; margin-top: 20px;'>📵 Lost Nodes</h4>
+<h4 style='color: #007bff; margin-top: 20px;'>🏷️ Name Changes</h4>
 <ul>
-<li><strong>!6c698854</strong> Flintstone-868-12 (Flnt) - TBEAM - was 1 hops - <em>last seen: 09/14 17:48</em></li>
-<li><strong>!849a59d8</strong> Meshtastic 59d8 (59d8) - UNSET - was 1 hops - <em>last seen: 09/13 17:27</em></li>
-<li><strong>!fd17c0ed</strong> Meshtastic c0ed (c0ed) - 95 - was 0 hops - <em>last seen: 09/13 10:22</em></li>
+<li><strong>!1bd63001</strong> renamed from '3001' to 'OH12' (2 hops) - <em>2025-09-14 19:32</em></li>
+</ul>
+<h4 style='color: #fd7e14; margin-top: 20px;'>⚙️ Role Changes</h4>
+<ul>
+<li><strong>OH12</strong> (!1bd63001) changed from N/A to SENSOR (2 hops) - <em>2025-09-14 19:32</em></li>
+</ul>
+<h4 style='color: #6f42c1; margin-top: 20px;'>🔧 Hardware Changes</h4>
+<ul>
+<li><strong>OH12</strong> (!1bd63001) changed from UNSET to RAK4631 (2 hops) - <em>2025-09-14 19:32</em></li>
+</ul>
+<h4 style='color: #e83e8c; margin-top: 20px;'>🔐 Public Key Changes</h4>
+<ul>
+<li><strong>OH12</strong> (!1bd63001) updated public key (2 hops) - <em>2025-09-14 19:32</em></li>
 </ul>
 </div>
