--- a/network_news.html
+++ b/network_news.html
@@ -1,25 +1,18 @@
-<h3 id='network-news'>📰 Network Activity (Last 48h, ≤2 hops)</h3>
+<h3 id='network-news'>📰 Network Activity (Last 48h, ≤3 hops)</h3>
 <div class='news-content'>
 <div class='news-summary'>
-<p><strong>Active nodes:</strong> 67 | 
-<span style='color: #28a745;'>New: 0</span> | 
-<span style='color: #dc3545;'>Lost: 0</span> | 
-<span style='color: #007bff;'>Changed: 1</span></p>
+<p><strong>Active nodes:</strong> 110 | 
+<span style='color: #28a745;'>New: 2</span> | 
+<span style='color: #dc3545;'>Lost: 1</span> | 
+<span style='color: #007bff;'>Changed: 0</span></p>
 </div>
-<h4 style='color: #007bff; margin-top: 20px;'>🏷️ Name Changes</h4>
+<h4 style='color: #28a745; margin-top: 20px;'>🆕 New Nodes</h4>
 <ul>
-<li><strong>!1bd63001</strong> renamed from '3001' to 'OH12' (2 hops) - <em>2025-09-14 19:32</em></li>
+<li><strong>!5b03ddcc</strong> Meshtastic ddcc (ddcc) - UNSET - 3 hops - <em>2025-09-14 22:00</em></li>
+<li><strong>!db2a9988</strong> Ludwigshafen JN49EM NW (LUO2) - HELTEC_V3 - 3 hops - <em>2025-09-14 21:56</em></li>
 </ul>
-<h4 style='color: #fd7e14; margin-top: 20px;'>⚙️ Role Changes</h4>
+<h4 style='color: #dc3545; margin-top: 20px;'>📵 Lost Nodes</h4>
 <ul>
-<li><strong>OH12</strong> (!1bd63001) changed from N/A to SENSOR (2 hops) - <em>2025-09-14 19:32</em></li>
-</ul>
-<h4 style='color: #6f42c1; margin-top: 20px;'>🔧 Hardware Changes</h4>
-<ul>
-<li><strong>OH12</strong> (!1bd63001) changed from UNSET to RAK4631 (2 hops) - <em>2025-09-14 19:32</em></li>
-</ul>
-<h4 style='color: #e83e8c; margin-top: 20px;'>🔐 Public Key Changes</h4>
-<ul>
-<li><strong>OH12</strong> (!1bd63001) updated public key (2 hops) - <em>2025-09-14 19:32</em></li>
+<li><strong>!433ed880</strong> Meshtastic d880 (d880) - HELTEC_V3 - was 3 hops - <em>last seen: 09/14 21:44</em></li>
 </ul>
 </div>
