Add comprehensive testing scripts and traceroute collection module
- Created `test_complete_integration.sh` for end-to-end testing of traceroute parsing and visualization.
- Developed `test_corrected_detection.sh` to validate the corrected traceroute detection logic.
- Implemented `test_gps_map.sh` to generate HTML with GPS map visualization.
- Added `test_improved_names.sh` for testing improved node name resolution.
- Introduced `test_sequential_integration.sh` to verify telemetry and traceroute integration.
- Created `test_traceroute.sh` for testing the overall traceroute functionality.
- Developed `test_traceroute_fix.sh` to validate the fixed traceroute command format.
- Implemented `test_traceroute_parsing.sh` to verify traceroute parsing with mock output.
- Added `traceroute_collector.sh` module for handling traceroute collection and routing topology analysis.
- Enhanced logging and error handling in the traceroute collection process.

--- a/network_news.html
+++ b/network_news.html
@@ -1,25 +1,53 @@
 <h3 id='network-news'>📰 Network Activity (Last 48h, ≤2 hops)</h3>
 <div class='news-content'>
 <div class='news-summary'>
-<p><strong>Active nodes:</strong> 67 | 
-<span style='color: #28a745;'>New: 0</span> | 
-<span style='color: #dc3545;'>Lost: 0</span> | 
-<span style='color: #007bff;'>Changed: 1</span></p>
+<p><strong>Active nodes:</strong> 58 | 
+<span style='color: #28a745;'>New: 1</span> | 
+<span style='color: #dc3545;'>Lost: 15</span> | 
+<span style='color: #007bff;'>Changed: 7</span></p>
 </div>
+<h4 style='color: #28a745; margin-top: 20px;'>🆕 New Nodes</h4>
+<ul>
+<li><strong>!9ee996fc</strong> Orschel_MQTT (OSQT) - HELTEC_V3 - 0 hops - <em>2025-09-16 20:09</em></li>
+</ul>
+<h4 style='color: #dc3545; margin-top: 20px;'>📵 Lost Nodes</h4>
+<ul>
+<li><strong>!9ee70e48</strong> Meshtastic 0e48 (am) - HELTEC_V3 - was 2 hops - <em>last seen: 09/13 15:25</em></li>
+<li><strong>!17f91fba</strong> NN2 (http://nerdnet.network) (NN2) - RAK4631 - was 2 hops - <em>last seen: 09/13 19:30</em></li>
+<li><strong>!0e268827</strong> mbe1 8827 (mbe1) - T_ECHO - was 2 hops - <em>last seen: 09/16 16:57</em></li>
+<li><strong>!1be669fe</strong> Meshtastic 69fe (69fe) - UNSET - was 2 hops - <em>last seen: 09/14 18:57</em></li>
+<li><strong>!4c616a06</strong> MeshHessen DP6T 04 (MHD4) - HELTEC_MESH_NODE_T114 - was 2 hops - <em>last seen: 09/16 18:04</em></li>
+<li><strong>!fd17c0ed</strong> Meshtastic c0ed (c0ed) - 95 - was 0 hops - <em>last seen: 09/13 10:22</em></li>
+<li><strong>!b03bd2fc</strong> Mesh Wölfersheim-Berstadt (MWB) - HELTEC_V3 - was 2 hops - <em>last seen: 09/16 12:39</em></li>
+<li><strong>!31cc7015</strong> Meshtastic 7015 (7015) - TRACKER_T1000_E - was 2 hops - <em>last seen: 09/14 11:30</em></li>
+<li><strong>!6c72fd24</strong> Meshtastic fd24 (fd24) - UNSET - was 2 hops - <em>last seen: 09/13 23:56</em></li>
+<li><strong>!1bd63001</strong> OHOBBY 12 (OH12) - RAK4631 - was 2 hops - <em>last seen: 09/14 19:32</em></li>
+<li><strong>!849a59d8</strong> Meshtastic 59d8 (59d8) - UNSET - was 1 hops - <em>last seen: 09/13 17:27</em></li>
+<li><strong>!671fe56c</strong> Sbkn@solar (eNOD) - SEEED_SOLAR_NODE - was 2 hops - <em>last seen: 09/16 18:10</em></li>
+<li><strong>!f0fc934f</strong> Meshtastic 934f (934f) - UNSET - was 2 hops - <em>last seen: 09/14 17:02</em></li>
+<li><strong>!43b5acc4</strong> Meshtastic acc4 (acc4) - UNSET - was 2 hops - <em>last seen: 09/14 07:46</em></li>
+<li><strong>!842be3a4</strong> Meshtastic e3a4 (e3a4) - T_ECHO - was 2 hops - <em>last seen: 09/16 18:07</em></li>
+</ul>
 <h4 style='color: #007bff; margin-top: 20px;'>🏷️ Name Changes</h4>
 <ul>
-<li><strong>!1bd63001</strong> renamed from '3001' to 'OH12' (2 hops) - <em>2025-09-14 19:32</em></li>
-</ul>
-<h4 style='color: #fd7e14; margin-top: 20px;'>⚙️ Role Changes</h4>
-<ul>
-<li><strong>OH12</strong> (!1bd63001) changed from N/A to SENSOR (2 hops) - <em>2025-09-14 19:32</em></li>
+<li><strong>!cacac522</strong> renamed from 'c522' to 'HRGM' (0 hops) - <em>2025-09-16 20:09</em></li>
+<li><strong>!fcf1a472</strong> renamed from 'wifr' to 'a472' (1 hops) - <em>2025-09-16 19:53</em></li>
+<li><strong>!db952071</strong> renamed from 'FFMS' to '2071' (2 hops) - <em>2025-09-16 19:35</em></li>
+<li><strong>!2df67288</strong> renamed from 'TRZS' to '7288' (0 hops) - <em>2025-09-16 19:34</em></li>
+<li><strong>!1ea53fad</strong> renamed from 'DF6' to '3fad' (2 hops) - <em>2025-09-16 19:33</em></li>
 </ul>
 <h4 style='color: #6f42c1; margin-top: 20px;'>🔧 Hardware Changes</h4>
 <ul>
-<li><strong>OH12</strong> (!1bd63001) changed from UNSET to RAK4631 (2 hops) - <em>2025-09-14 19:32</em></li>
+<li><strong>HRGM</strong> (!cacac522) changed from UNSET to RAK4631 (0 hops) - <em>2025-09-16 20:09</em></li>
+<li><strong>a472</strong> (!fcf1a472) changed from RAK4631 to UNSET (1 hops) - <em>2025-09-16 19:53</em></li>
+<li><strong>2071</strong> (!db952071) changed from RAK4631 to UNSET (2 hops) - <em>2025-09-16 19:35</em></li>
+<li><strong>7288</strong> (!2df67288) changed from SEEED_SOLAR_NODE to UNSET (0 hops) - <em>2025-09-16 19:34</em></li>
+<li><strong>3fad</strong> (!1ea53fad) changed from RAK4631 to UNSET (2 hops) - <em>2025-09-16 19:33</em></li>
+<li><strong>HAL9</strong> (!957405e3) changed from SEEED_SOLAR_NODE to 95 (1 hops) - <em>2025-09-16 19:27</em></li>
 </ul>
 <h4 style='color: #e83e8c; margin-top: 20px;'>🔐 Public Key Changes</h4>
 <ul>
-<li><strong>OH12</strong> (!1bd63001) updated public key (2 hops) - <em>2025-09-14 19:32</em></li>
+<li><strong>HRGM</strong> (!cacac522) updated public key (0 hops) - <em>2025-09-16 20:09</em></li>
+<li><strong>44ac</strong> (!849944ac) updated public key (0 hops) - <em>2025-09-16 20:05</em></li>
 </ul>
 </div>
